# vehicle_sim

./: .gitignore  README.md  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/vehicle_sim/share/vehicle_sim/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/vehicle_sim/share/vehicle_sim/cmake/: vehicle_simConfig.cmake
install/vehicle_sim/share/vehicle_sim/launch/: rviz.launch.py
install/vehicle_sim/share/vehicle_sim/models/my_robot/: model.urdf
install/vehicle_sim/share/vehicle_sim/worlds/: empty.world
install/vehicle_spawner_pkg/lib/vehicle_spawner_pkg/: spawn_vehicle
install/vehicle_spawner_pkg/share/vehicle_spawner_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/f1tenth_description/: CMakeLists.txt  package.xml
src/f1tenth_description/urdf/f1tenth/: model.sdf  model.urdf
src/f1tenth_description/urdf/steer_bot/: f1tenth_steer_bot.urdf  steer_bot.urdf  wheel.xacro
src/f1tenth_gazebo/: CMakeLists.txt  README.md  package.xml
src/f1tenth_gazebo/env-hooks/: f1tenth_gazebo.sh.in
src/f1tenth_gazebo/launch/: f1tenth.launch.py
src/f1tenth_gazebo/models/f1tenth/: model.sdf  model.urdf
src/f1tenth_gazebo/worlds/: f1tenth_empty.world
src/f1tenth_gazebo_plugins/: CMakeLists.txt  package.xml
src/f1tenth_gazebo_plugins/env-hooks/: f1tenth_gazebo_plugins.sh.in
src/f1tenth_gazebo_plugins/include/f1tenth_gazebo_plugins/: f1tenth_model_plugin.hpp  input.hpp  state.hpp
src/f1tenth_gazebo_plugins/src/: f1tenth_model_plugin.cpp
src/vehicle_sim/: CMakeLists.txt
src/vehicle_sim/models/f1tenth_car/: model.config
src/vehicle_sim/models/my_robot/: model.urdf
src/vehicle_spawner_pkg/: setup.cfg  setup.py
theory/: animation.py  kinematic_bicycle.py  pygame_kbm.py  simulation.py
