<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_gazebo</name>
  <version>0.0.0</version>
  <description>Launch Gazebo simulation with F1tenth</description>
  <maintainer email="khalidowlwalid@gmail.com">Khalid Hersafril</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>