<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>f1tenth_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>{Contains all custom plugins required for f1tenth gazebo}</description>
  <maintainer email="khalidowlwalid@gmail.com">khalidowlwalid</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_dev</depend>
  <depend>ackermann_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
